--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
-        <title>Fulo</title>
+        <title>Fulô Patchwork</title>
 
         <!--load css-->
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -252,7 +252,7 @@
                                 <!--cart-->
                                 <li data-toggle="tooltip" data-placement="left" title="Carrinho de compras">
                                     <a href="#/product/cart">
-                                        <i class="glyphicon glyphicon-shopping-cart btn-success badge">20</i>
+                                        <i class="glyphicon glyphicon-shopping-cart btn-success badge"> 20</i>
                                     </a>
                                 </li>
                                 <!--cart-->
@@ -260,7 +260,7 @@
                                 <!--wishlist-->
                                 <li data-toggle="tooltip" data-placement="left" title="Lista de desejos">
                                     <a href="#/product/wishList">
-                                        <i class="glyphicon glyphicon-heart text-danger badge btn-danger">10</i>
+                                        <i class="glyphicon glyphicon-heart text-danger badge btn-danger"> 10</i>
                                     </a>
                                 </li>
                                 <!--wishlist-->
@@ -307,29 +307,23 @@
                         </div>
 
                         <!--footer-->
-                        <legend><br /></legend>
-
                         <!--first bloc-->
-                        <div class="col-xs-12 col-md-6">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 well">
 
-                            <!--bloc of address-->
-                            <address>
-                                <h3>Fulô Patchwork</h3>
+                            <h2 class="bernhard-font"><strong>Fulô Patchwork</strong></h2>
 
-                                <div class="col-sm-12">
-                                    Gama, Brasília - DF, 7200000<br />
-                                </div>
+                            <div class="col-sm-12">
+                                Gama, Brasília - DF, 7200000<br />
+                            </div>
 
-                                <div class="col-sm-12">
-                                    <abbr title="Phone"><i class="glyphicon glyphicon-phone-alt"></i></abbr> (61) 0000-0000
-                                </div>
+                            <div class="col-sm-12">
+                                <abbr title="Phone"><i class="glyphicon glyphicon-phone-alt"></i></abbr> (61) 0000-0000
+                            </div>
 
-                                <div class="col-sm-12">
-                                    <abbr title="Phone"><i class="glyphicon glyphicon-phone-alt"></i></abbr> (61) 0000-0000
-                                </div>
+                            <div class="col-sm-12">
+                                <abbr title="Phone"><i class="glyphicon glyphicon-phone-alt"></i></abbr> (61) 0000-0000
+                            </div>
 
-                            </address>
-                            <!--end bloc address-->
 
                         </div>
                         <!--end first bloc-->
