[ADD] Type of product

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                                     <ul class="dropdown-menu" role="menu">
 
                                         <li><a href="#/product/listProduct">Produtos</a></li>
+                                        <li><a href="#/product/listProductType">Tipos de Produtos</a></li>
                                         <li><a href="#/user/listUser">Usuários</a></li>
 
                                     </ul>
@@ -386,7 +387,7 @@
                                            type="email"
                                            name="ds_forgot_email"
                                            placeholder="usuario@email.com"
-                                           ng-model="rowForgot.ds_email"
+                                           ng-model="forgot.ds_email"
                                            maxlength="50"
                                            ng-maxlength="50"
                                            />
