--- a/index.html
+++ b/index.html
@@ -557,6 +557,7 @@
     <script src="app/component/geral.js"></script>
     <script src="app/component/bootstrap.min.js"></script>
     <script src="app/component/nicescroll.min.js"></script>
+    <script src="app/component/angular-locale_pt-br.js"></script>
     <!--library-->
 
     <!--modules-->
