[ADD] Fare value

--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
                         </div>
 
                         <!--footer-->
-                        <!--first bloc-->
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 well">
+                        <!--first block-->
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 well zindex-back">
 
                             <h2 class="bernhard-font"><strong>Fulô Patchwork</strong></h2>
 
@@ -558,6 +558,7 @@
     <script src="app/component/bootstrap.min.js"></script>
     <script src="app/component/nicescroll.min.js"></script>
     <script src="app/component/angular-locale_pt-br.js"></script>
+    <script src="app/component/loading-bar.js"></script>
     <!--library-->
 
     <!--modules-->
