[UP] Confirmation buy

--- a/index.html
+++ b/index.html
@@ -198,15 +198,7 @@
                     <div class="row">
 
                         <!--flashmessage-->
-
-                        <div id="flashmessage" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 alert navbar-fixed-top">
-
-                            <div  class="alert {{flashType}} fade in" role="alert">
-                                <i class="glyphicon {{glyphicon}}"></i>
-                                {{flashMsg}}
-                            </div>
-
-                        </div>
+                        <div id="flashmessage" class="col-xs-12 col-sm-12 col-md-12 col-lg-12"></div>
                         <!--flashmessage-->
 
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -279,7 +271,7 @@
             </legend>
 
             <!--form-->
-            <form id="login" name="form" class="form-horizontal">
+            <form id="login" name="form" class="form-horizontal" novalidate>
 
                 <!-- field email-->
                 <div class="form-group">
