--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
     <!--Controllers-->
 
     <!--services-->
-    <script src="app/service/arroz.js"></script>
+    <script src="app/service/services.js"></script>
     <!--services-->
 
     <!--directives-->
