--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <li class="dropdown thumb-dropdown">
 
                                     <a href="" class="dropdown-toggle" data-toggle="dropdown">
-                                        <i class="glyphicon glyphicon-filter"></i> Filtros<span class="caret"></span>
+                                        <i class="glyphicon glyphicon-filter"></i> Produtos<span class="caret"></span>
                                     </a>
 
                                     <ul
